# http-server

./: .clangd  .gitignore  CMakeLists.txt  README.md  TODO  build.sh  main.cpp
public/: file.html
src/: CMakeLists.txt  common.hpp  file.cpp  file.hpp  http.cpp  http.hpp  main.cpp  ring_buffer.cpp  ring_buffer.hpp  socket.cpp  socket.hpp
